--- a/_static/css/custom.css
+++ b/_static/css/custom.css
@@ -1,14 +1,14 @@
 /* Import Urbit fonts */
 @font-face {
     font-family: 'Urbit Sans Book';
-    src: url('../fonts/UrbitSans-Book.woff2') format('woff2');
+    src: url('../fonts/UrbitSansTT-Regular.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Urbit Sans';
-    src: url('../fonts/UrbitSans-Bold.woff2') format('woff2');
+    src: url('../fonts/UrbitSansTT-Bold.woff2') format('woff2');
     font-weight: bold;
     font-style: normal;
 }
